@@ -1,0 +1,33 @@
+<?php
+$title = 'Password required';
+includeTemplate('style/include/header.php', compact('title'));
+?>
+
+<p>
+  The ticket <span class="ticketid"><?php echo $id; ?></span> is
+  protected. Please enter the password to unlock the content.
+</p>
+
+<form action="<?php echo $masterPath; ?>" method="post">
+  <ul>
+    <li>
+      <label class="description">Password</label>
+      <div>
+	<input name="p" class="element text medium" type="password" maxlength="255"/>
+      </div><p class="guidelines"><small>Type in the password required to unlock this ticket.</small></p>
+    </li>
+
+    <li class="buttons">
+      <input type="hidden" name="t" value="<?php echo $id; ?>"/>
+      <input type="submit" name="submit" value="Download"/>
+    </li>
+  </ul>
+</form>
+
+<div id="footer">
+  Generated by <a href="http://www.thregr.org/~wavexx/hacks/dl/">dl ticket service</a>
+</div>
+
+<?php
+includeTemplate('style/include/footer.php');
+?>
